codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay_queue_submissions.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                                                "
"                                                                                                    "
"  Compose                       Session                  Transcript (open first)                    "
"  /        Commands             tab  Queue message       ⌃t            Open transcript              "
"  @        Mention files        ⌥,   Less reasoning      f3            Find text                    "
"  !        Shell command        ⌥.   More reasoning      pgup / pgdn   Scroll                       "
"  ⇧enter   New line             f4   Inspect activity    ⌃space        Start selection              "
"  ⌃v       Paste image          ⌃c   Quit                ⌃home / ⌃end  Top / latest                 "
"  ⌃g       External editor                               ⇧⌥, / ⇧⌥.     Top / latest                 "
"  ⌃r       Search history                                                                           "
"  esc esc  Edit last message                                                                        "
"                                                                                                    "
"  /keymap customize                                                                                 "
"                                                                                                    "
"› Ask Ore to do anything                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? / esc close                                                                                     "
